--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/lasagna.html" target="_blank" rel="noopener and noreferrer ">Lasagna Recipe</a>
 </body>
 </html>
