added the target and rel attributes in the lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -72,6 +72,6 @@
         <li>Rest lasagna for 15 minutes before serving.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html" target="_blank" rel="noopener and noreferrer">Home</a>
 </body>
 </html>
