added links for my others recipe page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank" rel="noopener and noreferrer ">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener and noreferrer ">Lasagna Recipe</a></li>
+        <li><a href="recipes/thieboudieune.html" target="_blank" rel="noopener and noreferrer">thiebou-dieunne Recipe</a></li>
+        <li><a href="recipes/bissap_juice.html" target="_blank" rel="noopener and noreferrer">Bissap Recipe</a></li>
+</ul>
 </body>
 </html>
