code debugging(changed the path and the sizes of the images.)

--- a/recipes/thieboudieune.html
+++ b/recipes/thieboudieune.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Thiebou Dieune (Senegalese Rice and Fish)</h1>
-    <img src="images/thiebou-dieunne.jpg" alt="A delicious plate of Senegalese rice and fish">
+    <img src="../images/thiebou-dieunne.jpg" alt="A delicious plate of Senegalese rice and fish" width="300">
     
     <h2>Description</h2>
     <p>Thiebou Dieune (also spelled Thieboudienne) is a traditional Senegalese dish of richly spiced fish and flavorful rice, 
