--- a/recipes/bissap_juice.html
+++ b/recipes/bissap_juice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Bissap (Hibiscus) Juice</h1>
-    <img src="images/bissap.jpg" alt="A refreshing glass of Bissap juice">
+    <img src="../images/bissap.jpg" alt="A refreshing glass of Bissap juice" width="300">
     
     <h2>Description</h2>
     <p>Bissap Juice is a popular West African beverage made from dried hibiscus flowers (known as sorrel in some regions). 
